--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -3,11 +3,11 @@
         {% if pub.url %}<a href="{{ pub.url }}" target="_blank">{% endif %}
         {{ pub.title }}
         {% if pub.url %}</a>{% endif %}
-        <small class="badge">{{ pub.type }}</small>
+        {% if pub.type != 'Paper' %}<small class="badge">{{ pub.type }}</small>{% endif %}
     </h3>
     <div class="authors">
         {% for author in pub.authors %}
-            {% if forloop.last %} and {% endif %}
+            {% if forloop.last and pub.authors.size >= 2 %} and {% endif %}
             {% include author.html author=author -%}
             {% if forloop.last != true and pub.authors.size > 2 %}, {% endif %}
         {% endfor %}
@@ -18,8 +18,8 @@
         {% if pub.proc.url %}<a href="{{ pub.proc.url }}" target="_blank">{% endif %}
         {{ pub.proc.title }}
         {%- if pub.proc.abbr -%}&nbsp;({{ pub.proc.abbr }}){% endif -%}
-        {% if pub.proc.url -%}</a>{%- endif -%},
-        {% if pub.proc.ea -%}to appear{% else -%}pp. {{ pub.proc.page }}, {{ pub.proc.venue }}{% endif %}, {{ pub.year }}.
+        {% if pub.proc.url -%}</a>{%- endif -%}
+        {% if pub.proc.ea -%}, to appear{% elsif pub.noinfo -%}{% else -%}, pp. {{ pub.proc.page }}, {{ pub.proc.venue }}{% endif %}, {{ pub.year }}.
     </div>
     {% endif %}
 
@@ -28,8 +28,8 @@
         {% if pub.journal.url -%}<a href="{{ pub.journal.url }}" target="_blank">{% endif %}
         {{ pub.journal.title }}
         {%- if pub.journal.abbr -%}&nbsp;({{ pub.journal.abbr }}){% endif -%}
-        {% if pub.journal.url -%}</a>{% endif -%},
-        {% if pub.journal.ea -%}to appear{% else -%}vol. {{ pub.journal.volume}}, no. {{ pub.journal.issue }}, pp. {{ pub.journal.page }}{% endif %}, {{ pub.year }}.
+        {% if pub.journal.url -%}</a>{% endif -%}
+        {% if pub.journal.ea -%}, to appear{% elsif pub.noinfo -%}{% else -%}, vol. {{ pub.journal.volume}}, no. {{ pub.journal.issue }}, pp. {{ pub.journal.page }}{% endif %}, {{ pub.year }}.
     </div>
     {% endif %}
 
